--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -20,5 +20,10 @@ dependencies {
   api deps.support.v4
   api deps.support.appCompat
 
+
+  //pengjunwei 自定义添加
+  implementation deps.stetho.core
+
   api project(':library')
+
 }
